fixed align button

--- a/gestaltgesetze/html/style.css
+++ b/gestaltgesetze/html/style.css
@@ -7,7 +7,3 @@
     flex-direction: column;
     align-items: center;
 }
-
-.buttonAlign {
-    margin-left: -8rem;
-}
