--- a/gestaltgesetze/src/components/my-button/my-button.css
+++ b/gestaltgesetze/src/components/my-button/my-button.css
@@ -24,3 +24,8 @@
 	text-decoration: none;
 	color: #FFF !important;
 }
+
+.buttonClass {
+	display: flex;
+	justify-content: center;
+}
